# SDL_stretch

./: ChangeLog  Makefile.am  Makefile.in  SDL_stretch.h  SDL_stretch.spec  SDL_stretchcode.h  SDL_stretchtest.hh  acinclude.m4  aclocal.m4  config.h.in  configure  configure.ac  parallax2.c  sdlscreen.c  sdlstretch.c  sdlstretch23.c  sdlstretchcode.c
doc/: Makefile.am  Makefile.in  index.htm  make-doc.py
